Fixed the RBM error
Fixed the RBM error rate

--- a/Recommender System.ipynb
+++ b/Recommender System.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -134,7 +134,7 @@
        "4                       Crime|Mystery|Thriller  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "[5 rows x 9719 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "         1.50001496e+00,  7.20660030e-04,  2.68145467e-06]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,17 +647,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create Binary ratings for the movies\n",
-    "RBM_data =(user_title.to_numpy() >= 3).astype(int)\n",
+    "user_ratings = user_title.to_numpy()\n",
+    "\n",
+    "RBM_data = (user_ratings >= 4).astype(int)\n",
     "\n",
     "num_users,num_movies = RBM_data.shape\n",
+    "\n",
     "cut = int(num_users*.7)\n",
-    "Xtr = X[:cut,::]\n",
-    "Xte = X[cut:,::]\n",
+    "Xtr = RBM_data[:cut,::]\n",
+    "Xte = RBM_data[cut:,::]\n",
     "\n",
     "\n",
     "percent_masked = .3 # The percentage of data that is missing and needs to be estimated.\n",
@@ -667,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +687,7 @@
        "BernoulliRBM(n_components=512, n_iter=100, random_state=0)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,122 +698,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-34654.027880412345\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(RBM.score_samples(Xte).mean())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-142475.42495828794 : 16\n",
-    "-12452.666514743332 : 32\n",
-    "-15789.723370317322 : 128"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RBM = BernoulliRBM(n_components=32, learning_rate=0.1, batch_size=10, n_iter=100, verbose=0, random_state=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BernoulliRBM(n_components=32, n_iter=100, random_state=0)"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "RBM.fit(Xtr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-6146.025315525231\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(RBM.score_samples(Xte).mean())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-8400.401682314347: 16 .01\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RBM = BernoulliRBM(n_components=16, learning_rate=0.1, batch_size=100, n_iter=100, verbose=0, random_state=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BernoulliRBM(batch_size=100, n_components=16, n_iter=100, random_state=0)"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "RBM.fit(Xtr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-9651.433385652344\n"
+      "-515.0958544861413\n"
      ]
     }
    ],
@@ -821,28 +715,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    Xte_mis_c = np.copy(Xte_mis)\n",
-    "    Xte_mis_c[Xte_mis_c<0] = 0.5\n",
-    "    for it in range(100):\n",
-    "        Xte_mis_c=RBM.gibbs(Xte_mis_c)\n",
-    "        Xte_mis_c[Xte_mis >= 0] = Xte_mis[Xte_mis >= 0]"
+    "Xte_mis_c = np.copy(Xte_mis)\n",
+    "Xte_mis_c[Xte_mis_c<0] = 0.5\n",
+    "for it in range(100):\n",
+    "    Xte_mis_c=RBM.gibbs(Xte_mis_c)\n",
+    "    Xte_mis_c[Xte_mis >= 0] = Xte_mis[Xte_mis >= 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8970205635500419\n",
-      "Error rate: 0.9490872139878762\n"
+      "0.004702635871261126\n",
+      "Error rate: 0.015657526245638206\n"
      ]
     }
    ],
@@ -856,6 +750,48 @@
     "print(count/(Xte_mis_c.shape[0] * Xte_mis_c.shape[1]))\n",
     "print('Error rate:', np.mean( (Xte_mis_c!=Xte)[Xte_mis<0] ) )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
