Started Work on getting graphs
Started Work on getting graphs

--- a/Recommender System.ipynb
+++ b/Recommender System.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -134,7 +134,7 @@
        "4                       Crime|Mystery|Thriller  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "[5 rows x 9719 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "         1.50001496e+00,  7.20660030e-04,  2.68145467e-06]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "BernoulliRBM(n_components=512, n_iter=100, random_state=0)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -753,38 +753,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "simple_learn_rate = [.001, .01, .1]\n",
+    "learnrate = [.001, .005, .01, .015, .02, .025, .03, .035, .04, .045, .05, .055, .06, .065, .07, .075, .08, .085, .09, .095, .1]\n",
+    "components = [16, 32, 48, 64, 80, 96, 112, 128, 144, 160, 176, 192, 208, 224, 240, 256, 272, 288, 304, 320, 336, 352, 368, 384, 400, 416, 432, 448, 464, 480, 496, 512]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.014745855360699684 : #Components 16\n",
+      "0.013749943839575876 : #Components 32\n",
+      "0.013641367019603732 : #Components 48\n",
+      "0.01383044044748626 : #Components 64\n",
+      "0.013716247585101763 : #Components 80\n",
+      "0.01351219804411963 : #Components 96\n",
+      "0.013150899315591632 : #Components 112\n",
+      "0.014848816138259476 : #Components 128\n",
+      "0.013257604121426325 : #Components 144\n",
+      "0.01349160588860767 : #Components 160\n",
+      "0.014972369071331227 : #Components 176\n",
+      "0.014425740943195603 : #Components 192\n",
+      "0.015039761580279453 : #Components 208\n",
+      "0.01503227352372965 : #Components 224\n",
+      "0.016022569002441107 : #Components 240\n",
+      "0.014592350201428721 : #Components 256\n",
+      "0.015548949425666063 : #Components 272\n",
+      "0.015872807871445044 : #Components 288\n",
+      "0.014729007233462627 : #Components 304\n",
+      "0.01544224461983137 : #Components 320\n",
+      "0.015595749779102332 : #Components 336\n",
+      "0.01693236787324218 : #Components 352\n",
+      "0.017900199182304226 : #Components 368\n",
+      "0.02028701720755395 : #Components 384\n",
+      "0.01570994264148683 : #Components 400\n",
+      "0.014863792251359082 : #Components 416\n",
+      "0.014182379105327004 : #Components 432\n",
+      "0.015208242852650024 : #Components 448\n",
+      "0.015387956209845297 : #Components 464\n",
+      "0.01705592080631393 : #Components 480\n"
+     ]
+    }
+   ],
+   "source": [
+    "error_rates = []\n",
+    "for c in components:\n",
+    "    RBM = BernoulliRBM(n_components=c, learning_rate=0.1, batch_size=10, n_iter=100, verbose=0, random_state=0)\n",
+    "    RBM.fit(Xtr)\n",
+    "    Xte_mis_c = np.copy(Xte_mis)\n",
+    "    Xte_mis_c[Xte_mis_c<0] = 0.5\n",
+    "    for it in range(100):\n",
+    "        Xte_mis_c=RBM.gibbs(Xte_mis_c)\n",
+    "        Xte_mis_c[Xte_mis >= 0] = Xte_mis[Xte_mis >= 0]\n",
+    "    \n",
+    "    count = 0\n",
+    "    for i in range(Xte_mis_c.shape[0]):\n",
+    "        for j in range(Xte_mis_c.shape[1]):\n",
+    "            if Xte_mis_c[i,j] != Xte[i,j]:\n",
+    "                count += 1\n",
+    "    print(np.mean( (Xte_mis_c!=Xte)[Xte_mis<0]), \": #Components\", c)\n",
+    "    error_rates.append( np.mean( (Xte_mis_c!=Xte)[Xte_mis<0]) )"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.plot(components, error_rates, 'r-', lw=2)\n",
+    "plt.ylabel('Error Rate')\n",
+    "plt.xlabel('# of Components in the Model')\n",
+    "\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "across_all = []\n",
+    "for l in simple_learn_rate:\n",
+    "    error_rates = []\n",
+    "    for c in components:\n",
+    "        RBM = BernoulliRBM(n_components=c, learning_rate=l, batch_size=10, n_iter=100, verbose=0, random_state=0)\n",
+    "        RBM.fit(Xtr)\n",
+    "        Xte_mis_c = np.copy(Xte_mis)\n",
+    "        Xte_mis_c[Xte_mis_c<0] = 0.5\n",
+    "        for it in range(100):\n",
+    "            Xte_mis_c=RBM.gibbs(Xte_mis_c)\n",
+    "            Xte_mis_c[Xte_mis >= 0] = Xte_mis[Xte_mis >= 0]\n",
+    "\n",
+    "        count = 0\n",
+    "        for i in range(Xte_mis_c.shape[0]):\n",
+    "            for j in range(Xte_mis_c.shape[1]):\n",
+    "                if Xte_mis_c[i,j] != Xte[i,j]:\n",
+    "                    count += 1\n",
+    "        print(np.mean( (Xte_mis_c!=Xte)[Xte_mis<0]), \": #Components\", c)\n",
+    "        error_rates.append( np.mean( (Xte_mis_c!=Xte)[Xte_mis<0]) )\n",
+    "    across_all.append(error_rates)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(len(simple_learn_rate)):\n",
+    "    plt.plot(components, across_all[i], 'r-', lw=2)\n",
+    "    plt.ylabel(\"Learn Rate:\" + str(simple_learn_rate[i]))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "across_all = []\n",
+    "for l in learnrate:\n",
+    "    error_rates = []\n",
+    "    for c in components:\n",
+    "        RBM = BernoulliRBM(n_components=c, learning_rate=l, batch_size=10, n_iter=100, verbose=0, random_state=0)\n",
+    "        RBM.fit(Xtr)\n",
+    "        Xte_mis_c = np.copy(Xte_mis)\n",
+    "        Xte_mis_c[Xte_mis_c<0] = 0.5\n",
+    "        for it in range(100):\n",
+    "            Xte_mis_c=RBM.gibbs(Xte_mis_c)\n",
+    "            Xte_mis_c[Xte_mis >= 0] = Xte_mis[Xte_mis >= 0]\n",
+    "\n",
+    "        count = 0\n",
+    "        for i in range(Xte_mis_c.shape[0]):\n",
+    "            for j in range(Xte_mis_c.shape[1]):\n",
+    "                if Xte_mis_c[i,j] != Xte[i,j]:\n",
+    "                    count += 1\n",
+    "        print(np.mean( (Xte_mis_c!=Xte)[Xte_mis<0]), \": #Components\", c)\n",
+    "        error_rates.append( np.mean( (Xte_mis_c!=Xte)[Xte_mis<0]) )\n",
+    "    across_all.append(error_rates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(learnrate)):\n",
+    "    plt.plot(components, across_all[i], 'r-', lw=2)\n",
+    "    plt.ylabel(\"Learn Rate:\" + str(learnrate[i]))"
+   ]
   },
   {
    "cell_type": "code",
