--- a/Recommender System.ipynb
+++ b/Recommender System.ipynb
@@ -800,7 +800,8 @@
       "0.014182379105327004 : #Components 432\n",
       "0.015208242852650024 : #Components 448\n",
       "0.015387956209845297 : #Components 464\n",
-      "0.01705592080631393 : #Components 480\n"
+      "0.01705592080631393 : #Components 480\n",
+      "0.01886054243481647 : #Components 496\n"
      ]
     }
    ],
