--- a/Recommender System.ipynb
+++ b/Recommender System.ipynb
@@ -961,7 +961,7 @@
     }
    ],
    "source": [
-    "# DON'T RERUN UNLESS YOU WANT TO BE THERE ALL DAY\n",
+    "# DON'T RERUN UNLESS YOU WANT TO BE HERE ALL DAY\n",
     "across_all = []\n",
     "for l in simple_learn_rate:\n",
     "    error_rates = []\n",
